--- a/main.css
+++ b/main.css
@@ -1,12 +1,23 @@
   body{
     background-color: #E3C6F6;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
   }
   
   h1 {
-      font-family: system-ui, sans-serif;
+      font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       color: black;
       font-weight: bold;
-      font-size: 1.5rem;
+      font-size: 3rem;
+      text-align: center;
+  }
+  
+  h2 {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      color: black;
+      font-weight: bold;
+      font-size: 2, 5rem;
       text-align: center;
   }
 
@@ -14,8 +25,6 @@
       position: relative;
       width: 100vw;
       height: 100vh;
-      overflow: hidden;
-
   }
 
   .clickies {
