--- a/main.css
+++ b/main.css
@@ -1,34 +1,36 @@
-  body{
-    background-color: #E3C6F6;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-  }
-  
-  h1 {
-      font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      color: black;
-      font-weight: bold;
-      font-size: 3rem;
-      text-align: center;
-  }
-  
-  h2 {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      color: black;
-      font-weight: bold;
-      font-size: 2, 5rem;
-      text-align: center;
-  }
+ * {
+     margin: 0;
+     padding: 0;
+     box-sizing: border-box;
+ }
 
-  #board {
-      position: relative;
-      width: 100vw;
-      height: 100vh;
-  }
+ body {
+     background-color: #E3C6F6;
+ }
 
-  .clickies {
-      background-color: rgb(240, 32, 32);
-      position: absolute;
-      display: block;
-  }
+ h1 {
+     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+     color: black;
+     font-weight: bold;
+     font-size: 3rem;
+     text-align: center;
+ }
+
+ h2 {
+     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+     color: black;
+     font-weight: bold;
+     font-size: 2, 5rem;
+     text-align: center;
+ }
+
+ .board {
+     position: relative;
+     width: 100vw;
+     height: 100vh;
+ }
+
+ .clickies {
+     background-color: rgb(240, 32, 32);
+     position: absolute;
+ }
