--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@
      margin: 0;
      padding: 0;
      box-sizing: border-box;
+     cursor: crosshair;
  }
 
  body {
@@ -12,15 +13,27 @@
      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      color: black;
      font-weight: bold;
-     font-size: 3rem;
+     font-size: 5rem;
      text-align: center;
+ }
+
+ button {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: black;
+    font-weight: bold;
+    font-size: 4rem;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
  }
 
  h2 {
      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      color: black;
      font-weight: bold;
-     font-size: 2, 5rem;
+     font-size: 2,5rem;
      text-align: center;
  }
 
