--- a/main.css
+++ b/main.css
@@ -7,6 +7,7 @@
 
  body {
      background-color: #E3C6F6;
+
  }
 
  h1 {
@@ -35,6 +36,7 @@
      font-weight: bold;
      font-size: 2,5rem;
      text-align: center;
+     overflow: hidden;
  }
 
  .board {
