--- a/main.css
+++ b/main.css
@@ -9,6 +9,8 @@
     background-image: url(/galaxie-galaxy.gif);
     background-repeat: no-repeat;
     background-size: 100%;
+    text-align: center;
+
  }
 
  h1 {
@@ -17,25 +19,33 @@
      font-weight: bold;
      font-size: 5rem;
      text-align: center;
-     text-shadow: 3px 3px 3px red, 0 0 1em blue, 0 0 0.2em blue;
+     text-shadow: 7px 7px 7px rgb(197, 9, 9), 0 0 1em rgb(16, 59, 177), 0 0 0.2em rgb(255, 255, 255);
  }
 
  button {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: black;
-    font-weight: bold;
-    font-size: 4rem;
-    margin: auto;
-    display: flex;
+    display: inline-block;
+    outline: 0;
+    border: none;
+    cursor: pointer;
+    font-weight: 600;
+    border-radius: 4vw;
+    font-size: 50px;
+    height: 15vh;
+    background-color: #7621f5;
+    color: white;
+    padding: 20px 30px;
     align-items: center;
-    justify-content: center;
+    box-shadow: 3px 3px 3px red, 0 0 1em blue, 0 0 0.2em blue;
     text-shadow: 3px 3px 3px red, 0 0 1em blue, 0 0 0.2em blue;
+    :hover {
+        background-color: #6600ff;
+    }
 
  }
 
  h2 {
      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     color: black;
+     color: rgb(255, 255, 255);
      font-weight: bold;
      font-size: 3rem;
      text-align: center;
@@ -60,3 +70,4 @@
  .foto-nanas {
     position: absolute;
  }
+3
