--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
  }
 
  body {
-    background-image: url('https://c.tenor.com/RJgdogvsjEsAAAAd/tenor.gif');
+    background-image: url('galaxie-galaxy.gif');
     background-repeat: no-repeat;
     background-size: 100%;
     text-align: center;
