--- a/main.css
+++ b/main.css
@@ -8,8 +8,10 @@
  body {
     background-image: url('galaxie-galaxy.gif');
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
     text-align: center;
+    background-position: center top;
+    
 
  }
 
@@ -19,29 +21,31 @@
      font-weight: bold;
      font-size: 5rem;
      text-align: center;
-     text-shadow: 7px 7px 7px red, 0 0 1em rgb(74, 59, 206), 0 0 0.2em rgb(255, 255, 255);
+     text-shadow: 3px 3px 3px red, 0 0 1em blue, 0 0 0.2em blue;
  }
 
  button {
-    display: inline-block;
-    outline: 0;
-    border: none;
-    cursor: pointer;
-    font-weight: 600;
-    border-radius: 4vw;
-    font-size: 50px;
-    height: 15vh;
-    background-color: #9147ff;
-    color: white;
-    padding: 20px 30px;
-    align-items: center;
-    box-shadow: 3px 3px 3px red, 0 0 1em blue, 0 0 0.2em blue;
-    text-shadow: 3px 3px 3px red, 0 0 1em blue, 0 0 0.2em blue;
-    :hover {
-        background-color: #772ce8;
-    }
-
- }
+        background: #5E5DF0;
+        border-radius: 999px;
+        box-shadow: #5E5DF0 0 10px 20px -10px;
+        box-sizing: border-box;
+        color: #FFFFFF;
+        cursor: pointer;
+        font-family: Inter,Helvetica,"Apple Color Emoji","Segoe UI Emoji",NotoColorEmoji,"Noto Color Emoji","Segoe UI Symbol","Android Emoji",EmojiSymbols,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans",sans-serif;
+        font-size: 3rem;
+        font-weight: 700;
+        line-height: normal;
+        opacity: 1;
+        outline: 0 solid transparent;
+        padding: 20px 30px;
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
+        width: fit-content;
+        border: 0;
+        text-shadow: 3px 3px 3px red, 0 0 1em blue, 0 0 0.2em blue;
+        box-shadow: 3px 3px 3px red, 0 0 1em blue, 0 0 0.2em blue;;
+      }
 
  h2 {
      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
