--- a/main.css
+++ b/main.css
@@ -11,8 +11,11 @@
     background-size: cover;
     text-align: center;
     background-position: center top;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     
-
  }
 
  h1 {
